@@ -1,0 +1,9 @@
+Verify GL_VERTEX_PROGRAM_POINT_SIZE is enabled in WebGL
+
+On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE".
+
+Regression test for https://bugs.webkit.org/show_bug.cgi?id=37178 : Must enable GL_VERTEX_PROGRAM_POINT_SIZE during initialization
+Draw a point of size 1 and verify it does not touch any other pixels.
+Draw a point of size 2 and verify it fills the appropriate region.
+PASS 
+
