@@ -1,3 +1,15 @@
+2010-04-15  Zhenyao Mo  <zmo@google.com>
+
+        Reviewed by Dimitri Glazkov.
+
+        Must enable GL_VERTEX_PROGRAM_POINT_SIZE during initialization
+        https://bugs.webkit.org/show_bug.cgi?id=37178
+
+        Test: fast/canvas/webgl/point-size.html
+
+        * platform/graphics/mac/GraphicsContext3DMac.cpp: Enable GL_VERTEX_PROGRAM_POINT_SIZE during initialization.
+        (WebCore::GraphicsContext3D::GraphicsContext3D):
+
 2010-04-15  Eric Uhrhane  <ericu@chromium.org>
 
         Reviewed by Dmitry Titov.
